<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="11dp"
            android:text="提示"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/ll_message"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="13dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="13dp">

            <TextView
                android:id="@+id/tv_message"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                tools:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
        </RelativeLayout>

        <View style="@style/dividing_line" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/btn_cancel"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/item_half_left_btn_select"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textColor="@color/textColor" />
            </LinearLayout>

            <View
                android:layout_width="0.5dp"
                android:layout_height="fill_parent"
                android:background="#D1D1D1" />

            <LinearLayout
                android:id="@+id/btn_ok"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/item_half_right_btn_select"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</ScrollView>