<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.taoxue.ui.view.TopBar
        android:id="@+id/introduction_topbar"
        style="@style/TopBar"
        app:layout_collapseMode="pin"
        app:title="@string/resource_library"/>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp"
            >
            <!--android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
            <!--<android.support.design.widget.CollapsingToolbarLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--app:layout_scrollFlags="scroll|exitUntilCollapsed">-->

            <com.zhy.android.percent.support.PercentLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_scrollFlags="scroll|enterAlways"
                >
                <ImageView
                    android:id="@+id/resource_lib_image_iv"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_heightPercent="46%w"
                    android:layout_margin="10dp"
                    android:scaleType="fitCenter" />
                <!--android:layout_weight="4"-->
                <!--android:layout_margin="20dp"-->
                <!--app:layout_collapseMode="parallax"-->
                <com.zhy.android.percent.support.PercentLinearLayout
                    android:id="@+id/resource_lib_jieshao_ll"
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:orientation="vertical">

                    <!--<ImageView-->
                        <!--android:id="@+id/resource_lib_image_iv"-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="match_parent"-->
                        <!--android:layout_weight="4"-->
                        <!--android:scaleType="fitCenter" />-->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/size10dp"
                        android:layout_weight="6"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:id="@+id/resource_lib_title_tv"
                            style="@style/TextView_16_wrap"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="3" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView2"
                                style="@style/TextView_14_wrap.gray"
                                android:text="@string/supplier" />

                            <TextView
                                android:id="@+id/resource_lib_supplier_tv"
                                style="@style/TextView_14_wrap.gray" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/TextView_14_wrap.gray"
                                android:text="@string/total_resource_count" />

                            <TextView
                                android:id="@+id/resource_lib_total_resource_tv"
                                style="@style/TextView_14_wrap.gray" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/TextView_14_wrap.gray"
                                android:text="@string/total_reader_count" />

                            <TextView
                                android:id="@+id/resource_lib_total_reading_tv"
                                style="@style/TextView_14_wrap.gray" />
                        </LinearLayout>

                    </LinearLayout>

                </com.zhy.android.percent.support.PercentLinearLayout>

                <include layout="@layout/layout_divider_gay_hor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    ></include>
            </com.zhy.android.percent.support.PercentLinearLayout>

            <!--</android.support.design.widget.CollapsingToolbarLayout>-->

            <com.common.base.basecommon.tabs.ZTabLayout
                android:id="@+id/resource_lib_tablayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="pin"
                app:tabIndicatorColor="@color/colorPrimary"
                app:tabIndicatorHeight="3dp"
                app:tabMode="fixed"
                app:tabSelectedTextColor="@color/colorPrimary"
                app:tabTextAppearance="@style/tablaout_textsize"
                app:tabTextColor="@color/black" />

            <include layout="@layout/layout_divider_hor"></include>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/resource_lib_viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            >
        </android.support.v4.view.ViewPager>
    </android.support.design.widget.CoordinatorLayout>
    <!--<include layout="@layout/pin_jia"></include>-->

    <!--</LinearLayout>-->
    <!--</ScrollView>-->
</LinearLayout>
